# slippi_analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-01-31-implementation-plan.md  2026-01-31-slippi-ledgehog-clipper-design.md  2026-01-31-slippi-replay-clipper-design.md  2026-02-02-clipper-improvements.md  2026-02-02-dolphin-capture-improvements.md  2026-02-02-parallel-encoding.md  2026-02-02-scan-performance-and-ledgehog-techniques.md  2026-02-03-integration-test-coverage.md
docs/plans/archive/: 2026-01-31-implementation-plan.md
scripts/: integration_test.py  test_command_id_reload.py
src/: cli.py  config.py  database.py  models.py  scanner.py  sidecar.py
src/capture/: compile.py  dolphin.py  ffmpeg.py  file_monitor.py  monitors.py  pipeline.py
src/detectors/: base.py  ledgehog.py  registry.py
src/slippi_clip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stubs/slippi/: __init__.pyi  id.pyi
tests/: conftest.py  test_capture_pipeline.py  test_cli.py  test_compile.py  test_config.py  test_database.py  test_detector_registry.py  test_detectors_base.py  test_dolphin.py  test_ffmpeg.py  test_file_monitor.py  test_filename.py  test_ledgehog_detector.py  test_models.py  test_monitors.py  test_scanner.py  test_sidecar.py
